--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@ckb-lumos/base": "^0.18.0-rc1",
+    "@ckb-lumos/ckb-indexer": "^0.18.0-rc2",
     "@ckb-lumos/common-scripts": "^0.18.0-rc1",
     "@ckb-lumos/config-manager": "^0.18.0-rc1",
     "@ckb-lumos/hd": "^0.18.0-rc1",
